--- a/index.html
+++ b/index.html
@@ -8325,11 +8325,11 @@
 									<div class="eut-header-elements eut-position-left">
 										<div class="eut-wrapper">
 											<ul>
-												<li class="eut-header-element"><a href="https://x.com/hahayes_erc"
+												<li class="eut-header-element"><a href="https://x.com/HahaYes_Rizo"
 														target="_blank" rel="noopener noreferrer"><span
 															class="eut-item"><i class="fab fa-x-twitter"></i></span></a>
 												</li>
-												<li class="eut-header-element"><a href="https://t.me/hahayes_erc"
+												<li class="eut-header-element"><a href="https://t.me/Hahayes_Rizo_Eth"
 														target="_blank" rel="noopener noreferrer"><span
 															class="eut-item"><i class="fab fa-telegram"></i></span></a>
 												</li>
@@ -9740,7 +9740,7 @@
 																		<div class="eut-element eut-image socialpad bringinfront inlinebutton eut-align-center"
 																			style="">
 																			<div class="eut-image-wrapper"><a
-																					href="https://x.com/hahayes_erc"
+																					href="https://x.com/HahaYes_Rizo"
 																					target="_blank"><img loading="lazy"
 																						decoding="async" width="33"
 																						height="30"
@@ -9751,7 +9751,7 @@
 																		<div class="eut-element eut-image socialpad bringinfront inlinebutton eut-align-center"
 																			style="">
 																			<div class="eut-image-wrapper"><a
-																					href="https://t.me/hahayes_erc"
+																					href="https://t.me/Hahayes_Rizo_Eth"
 																					target="_blank"><img loading="lazy"
 																						decoding="async" width="37"
 																						height="31"
@@ -9879,10 +9879,10 @@
 						<div class="eut-header-responsive-elements">
 							<div class="eut-wrapper">
 								<ul>
-									<li class="eut-header-responsive-element"><a href="https://x.com/hahayes_erc"
+									<li class="eut-header-responsive-element"><a href="https://x.com/HahaYes_Rizo"
 											target="_blank" rel="noopener noreferrer"><span class="eut-item"><i
 													class="fab fa-x-twitter"></i></span></a></li>
-									<li class="eut-header-responsive-element"><a href="https://t.me/hahayes_erc"
+									<li class="eut-header-responsive-element"><a href="https://t.me/Hahayes_Rizo_Eth"
 											target="_blank" rel="noopener noreferrer"><span class="eut-item"><i
 													class="fab fa-telegram"></i></span></a></li>
 								</ul>
